--- a/package.json
+++ b/package.json
@@ -12,6 +12,32 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "moment": "^2.22.1",
     "openzeppelin-solidity": "1.9.0"
+  },
+  "devDependencies": {
+    "babel-polyfill": "^6.26.0",
+    "babel-preset-es2015": "^6.24.1",
+    "babel-preset-stage-2": "^6.24.1",
+    "babel-preset-stage-3": "^6.24.1",
+    "babel-register": "^6.26.0",
+    "chai": "^4.1.2",
+    "chai-as-promised": "^7.1.1",
+    "chai-bignumber": "^2.0.2",
+    "truffle-hdwallet-provider": "0.0.4"
+  },
+  "standard": {
+    "globals": [
+      "it",
+      "contract",
+      "before",
+      "beforeEach",
+      "after",
+      "afterEach",
+      "assert",
+      "artifacts",
+      "web3",
+      "describe"
+    ]
   }
 }
