--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "chai": "^4.1.2",
     "chai-as-promised": "^7.1.1",
     "chai-bignumber": "^2.0.2",
+    "eth-gas-reporter": "^0.1.5",
     "truffle-hdwallet-provider": "0.0.4"
   },
   "standard": {
