Add solidity-coverage pkg and coverage results

--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "chai-as-promised": "^7.1.1",
     "chai-bignumber": "^2.0.2",
     "eth-gas-reporter": "^0.1.5",
+    "solidity-coverage": "^0.5.1",
     "truffle-hdwallet-provider": "0.0.4"
   },
   "standard": {
