--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
   "license": "ISC",
   "dependencies": {
     "moment": "^2.22.1",
-    "openzeppelin-solidity": "1.9.0"
+    "openzeppelin-solidity": "1.9.0",
+    "vetx-token": "^1.0.0"
   },
   "devDependencies": {
     "babel-polyfill": "^6.26.0",
